2001-09-20  
	* added LOPT in Makefile for Solaris (wohoo! it compiles and works!)
	* added missing netinet/in.h (with sockaddr_in) to includes
	* removed bug that prevented other shellutils from working
	* removed bug that prevented media_NET from displaying directory
	* media_NET seems to work, disabled O_NONBLOCK setting mode that
	  caused errors in 64shell, maybe need to reenable it again later
	* written BASIC example for media_NET - mailsend
	* media_NET closes file after client disconnect
	* made system somewhat more quiet
	* added LOPT in Makefile and changes for FreeBSD (wohoo! it compiles and works!)

2001-09-19  
	* after LOAD endadress is reported correctly
	* fixed Win32 networking stuff
	* 'F' commands now send transfermode byte before data page
	* added fishload/fishsave/timeout options to config file
	* fixed fishload, fishsave is FOOBAR and will remain as such
	    it _must_ work, but it does not...
	* fixed EOF handling, older LNG bugs
	* wedge for C128 works
	* basic support for M-R and M-W commands
	* added signal handlers to main

2001-09-18  
	* cleaned up resman.c, some update notes, various client machines support
	* moved open/close/chkin/out to server side
	* modified BOOT function
	* added VERIFY code

2001-09-16  
	* cleanups in target-depended stuff
	* prepared Win32 port, added inpout32.dll (all for MingW)

2001-06-16  

	* more cleanups in fs_func.h, maybe common, unified access to filesystem will
	  be available
	* cleaned out some global variables

2001-06-14  

	* moved some stuff to config.h included by all .c files
	* signess clean version, towards non-Linux ports
	  (almost compiles under BC++5.2)

2001-04-15  

	* fs_accel fixes and extensions

2001-04-13  

	* fixed save (works), promoted to v0.8, load&save have Action Replay-like
	  messages

2001-02-01  

	* fixed configuration parser bug (empty lines were not allowed)

2000-07-25  

	* more wedge fixes, open/close is fixed, fishload works

2000-07-24  
