@@ -1,3 +1,6 @@
+2001-09-21  
+	* Win32 port is fully working (opendir needs to have '/' stripped from the end)
+
 2001-09-20  
 	* added LOPT in Makefile for Solaris (wohoo! it compiles and works!)
 	* added missing netinet/in.h (with sockaddr_in) to includes
